# smc_benchmark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
example/: eval_density.py  plot_force_gap.py  plot_squeeze_kit.py
install/: download_sam.py
scripts/: plot_gap_force.py  preprocess.py  segment.py  sort_image_dir.py
src/smc_benchmark/: _naming.py  _utils.py  plot.py  preprocess.py  read.py  segment.py  sort.py
tests/: test_read.py
tests/data/kit/: KIT-CF503K-1.TXT
tests/data/utw/: UTW-CF503K-1.csv
